Return early if no jobs created or maxNumberOfJobs is less than 1